--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <nav class="navbar py-3 navbar-expand-lg">
           <div class="container-fluid navbar-area">
             <a class="navbar-brand" href="#">
-              <img src="image/header/pure-new-zealand-logo.svg" alt="" />
+              <img src="image/navbar/logo.png" width="100px" alt="" />
             </a>
             <button
               class="navbar-toggler"
