--- a/bookTheHotel.html
+++ b/bookTheHotel.html
@@ -542,43 +542,7 @@
           </div>
         </div>
       </section>
-      <section class="package-image-container">
-        <div class="row">
-          <div class="col-12">
-            <div class="package-image-box">
-              <div class="package-image">
-                <img src="image/hotel/1.avif" alt="" />
-                <div class="package-overlay">
-                  <div class="overlay-data">
-                    <span>Delhi</span>
-                    <p>Laxmi Nagar</p>
-                  </div>
-                </div>
-              </div>
-              <div class="package-image">
-                <img src="image/hotel/2.avif" alt="" />
-                <div class="package-overlay">
-                  <div class="overlay-data">
-                    <span>Delhi</span>
-                    <p>Sarojani Nagar</p>
-                  </div>
-                </div>
-              </div>
-              <div class="package-image">
-                <img src="image/hotel/3.avif" alt="" />
-                <div class="package-overlay">
-                  <div class="overlay-data">
-                    <span>Delhi</span>
-                    <p>Nehru Place</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <section class="checkout-hotel">
+      <section class="checkout-hotel" id="checkout-checkin">
         <div class="checkout">
           <div class="row">
             <div class="col-6 check-in">
@@ -629,6 +593,288 @@
       </section>
       <section class="check-rates">
         <div class="check-rates-container">
+          <div class="accordion" id="accordionExample">
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingOne">
+                <div class="check-rates-box">
+                  <div class="check-rates-image">
+                    <img src="image/hotel/1.avif" alt="" />
+                  </div>
+                  <div class="check-rates-content">
+                    <p>DELUXE DOUBLE ROOM, 1 DOUBLE BED, NON SMOKING</p>
+                    <a href="#checkout-checkin">
+                      <span>View Room Details And Amenities</span>
+                    </a>
+                  </div>
+                  <div class="check-rates-button">
+                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                      Check Rates                    
+                    </button>
+                  </div>
+                </div>
+              </h2>
+              <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  <p><strong>1 Double Bed -</strong>
+                    <span>Overlooking the courtyard</span>
+                  </p>
+                  <p><strong>Internet -</strong> <span>Free WiFi</span>
+                  </p>
+                  <p><strong>In Room Entertainment - </strong> <span>Cable channels</span>
+                  </p>
+                  <p><strong>Food and Beverages - </strong> <span> Coffee/tea maker, 24-hour room service, and free bottled water</span>
+                  </p>
+                  <p><strong>Restrooms & Showers - </strong> <span>Private bathroom, free toiletries, and a shower</span>
+                  </p>
+                  <p><strong>Extra Features -</strong> <span>Safe, free newspaper, and desk; rollaway/extra beds available on request</span>
+                  </p>
+                  <p><strong>Pleasure -</strong> <span>Daily housekeeping and ceiling fan</span>
+                  </p>
+                  <p>Non-Smoking</p>
+                  <div class="check-hotel-container">
+                    <div class="check-hotel-box">
+                      <h5>Amenities and Features</h5>                        
+                        <ul>
+                          <li>
+                            Wheelchair Accessible bathroom
+                        </li>
+                          <li>
+                            Complimentary Breakfast
+                        </li>
+                          <li>
+                            Banquet hall on site
+                        </li>
+                        <li>Daily</li>
+                        <li>
+                            Free continental breakfast
+                        </li>
+                    </div>
+                    <div class="check-hotel-box">
+                      <h5>Amenities and Features</h5>                        
+                        <ul>
+                          <li>
+                            Wheelchair Accessible bathroom
+                        </li>
+                          <li>
+                            Complimentary Breakfast
+                        </li>
+                          <li>
+                            Banquet hall on site
+                        </li>
+                        <li>Daily</li>
+                        <li>
+                            Free continental breakfast
+                        </li>
+                    </div>
+                    <div class="check-hotel-box">
+                      <h5>Amenities and Features</h5>                        
+                        <ul>
+                          <li>
+                            Wheelchair Accessible bathroom
+                        </li>
+                          <li>
+                            Complimentary Breakfast
+                        </li>
+                          <li>
+                            Banquet hall on site
+                        </li>
+                        <li>Daily</li>
+                        <li>
+                            Free continental breakfast
+                        </li>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingTwo">
+                <div class="check-rates-box">
+                <div class="check-rates-image">
+                  <img src="image/hotel/1.avif" alt="" />
+                </div>
+                <div class="check-rates-content">
+                  <p>DELUXE DOUBLE ROOM, 1 DOUBLE BED, NON SMOKING</p>
+                  <a href="#checkout-checkin">
+                    <span>View Room Details And Amenities</span>
+                  </a>
+                </div>
+                <div class="check-rates-button">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                    Check Rates 
+                  </button>
+                </div>
+              </div>
+              </h2>
+              <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  <p><strong>1 Double Bed -</strong>
+                    <span>Overlooking the courtyard</span>
+                  </p>
+                  <p><strong>Internet -</strong> <span>Free WiFi</span>
+                  </p>
+                  <p><strong>In Room Entertainment - </strong> <span>Cable channels</span>
+                  </p>
+                  <p><strong>Food and Beverages - </strong> <span> Coffee/tea maker, 24-hour room service, and free bottled water</span>
+                  </p>
+                  <p><strong>Restrooms & Showers - </strong> <span>Private bathroom, free toiletries, and a shower</span>
+                  </p>
+                  <p><strong>Extra Features -</strong> <span>Safe, free newspaper, and desk; rollaway/extra beds available on request</span>
+                  </p>
+                  <p><strong>Pleasure -</strong> <span>Daily housekeeping and ceiling fan</span>
+                  </p>
+                  <p>Non-Smoking</p>
+                  <div class="check-hotel-container">
+                    <div class="check-hotel-box">
+                      <h5>Amenities and Features</h5>                        
+                        <ul>
+                          <li>
+                            Wheelchair Accessible bathroom
+                        </li>
+                          <li>
+                            Complimentary Breakfast
+                        </li>
+                          <li>
+                            Banquet hall on site
+                        </li>
+                        <li>Daily</li>
+                        <li>
+                            Free continental breakfast
+                        </li>
+                    </div>
+                    <div class="check-hotel-box">
+                      <h5>Amenities and Features</h5>                        
+                        <ul>
+                          <li>
+                            Wheelchair Accessible bathroom
+                        </li>
+                          <li>
+                            Complimentary Breakfast
+                        </li>
+                          <li>
+                            Banquet hall on site
+                        </li>
+                        <li>Daily</li>
+                        <li>
+                            Free continental breakfast
+                        </li>
+                    </div>
+                    <div class="check-hotel-box">
+                      <h5>Amenities and Features</h5>                        
+                        <ul>
+                          <li>
+                            Wheelchair Accessible bathroom
+                        </li>
+                          <li>
+                            Complimentary Breakfast
+                        </li>
+                          <li>
+                            Banquet hall on site
+                        </li>
+                        <li>Daily</li>
+                        <li>
+                            Free continental breakfast
+                        </li>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingThree">
+                <div class="check-rates-box">
+                  <div class="check-rates-image">
+                    <img src="image/hotel/1.avif" alt="" />
+                  </div>
+                  <div class="check-rates-content">
+                    <p>DELUXE DOUBLE ROOM, 1 DOUBLE BED, NON SMOKING</p>
+                    <a href="#checkout-checkin">
+                      <span>View Room Details And Amenities</span>
+                    </a>
+                  </div>
+                <div class="check-rates-button">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                    Check Rate
+                  </button>
+                </div>
+              </div>
+            </h2>
+              <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  <p><strong>1 Double Bed -</strong>
+                    <span>Overlooking the courtyard</span>
+                  </p>
+                  <p><strong>Internet -</strong> <span>Free WiFi</span>
+                  </p>
+                  <p><strong>In Room Entertainment - </strong> <span>Cable channels</span>
+                  </p>
+                  <p><strong>Food and Beverages - </strong> <span> Coffee/tea maker, 24-hour room service, and free bottled water</span>
+                  </p>
+                  <p><strong>Restrooms & Showers - </strong> <span>Private bathroom, free toiletries, and a shower</span>
+                  </p>
+                  <p><strong>Extra Features -</strong> <span>Safe, free newspaper, and desk; rollaway/extra beds available on request</span>
+                  </p>
+                  <p><strong>Pleasure -</strong> <span>Daily housekeeping and ceiling fan</span>
+                  </p>
+                  <p>Non-Smoking</p>
+                  <div class="check-hotel-container">
+                    <div class="check-hotel-box">
+                      <h5>Amenities and Features</h5>                        
+                        <ul>
+                          <li>
+                            Wheelchair Accessible bathroom
+                        </li>
+                          <li>
+                            Complimentary Breakfast
+                        </li>
+                          <li>
+                            Banquet hall on site
+                        </li>
+                        <li>Daily</li>
+                        <li>
+                            Free continental breakfast
+                        </li>
+                    </div>
+                    <div class="check-hotel-box">
+                      <h5>Amenities and Features</h5>                        
+                        <ul>
+                          <li>
+                            Wheelchair Accessible bathroom
+                        </li>
+                          <li>
+                            Complimentary Breakfast
+                        </li>
+                          <li>
+                            Banquet hall on site
+                        </li>
+                        <li>Daily</li>
+                        <li>
+                            Free continental breakfast
+                        </li>
+                    </div>
+                    <div class="check-hotel-box">
+                      <h5>Amenities and Features</h5>                        
+                        <ul>
+                          <li>
+                            Wheelchair Accessible bathroom
+                        </li>
+                          <li>
+                            Complimentary Breakfast
+                        </li>
+                          <li>
+                            Banquet hall on site
+                        </li>
+                        <li>Daily</li>
+                        <li>
+                            Free continental breakfast
+                        </li>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- 
           <div class="check-rates-box">
             <div class="check-rates-image">
               <img src="image/hotel/1.avif" alt="" />
@@ -656,21 +902,7 @@
             <div class="check-rates-button">
               <button type="submit">Check Rates</button>
             </div>
-          </div>
-          <div class="check-rates-box">
-            <div class="check-rates-image">
-              <img src="image/hotel/1.avif" alt="" />
-            </div>
-            <div class="check-rates-content">
-              <p>DELUXE DOUBLE ROOM, 1 DOUBLE BED, NON SMOKING</p>
-              <a href="">
-                <span>View Room Details And Amenities</span>
-              </a>
-            </div>
-            <div class="check-rates-button">
-              <button type="submit">Check Rates</button>
-            </div>
-          </div>
+          </div> -->
 
           <div class="check-about-hotel">
             <h3>ABOUT THE HOTEL</h3>
@@ -798,7 +1030,6 @@
                         </ul>
                     </div>
                 </div>
-
             </div>
           </div>
 
