--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
             <h5>Help</h5>
             <a href="">FAQs</a>
             <a href="">About newzealand.com</a>
-            <a href="">Adding your business and deals</a>
-            <a href="">Linking to newzealand.com</a>
+            <a href="">Adding your business </a>
+            <a href="">Linking to newzealand</a>
             <a href="">Terms of use</a>
             <a href="">Privacy Policy</a>
             <a href="">Cookies</a>
