--- a/hoteldetails.html
+++ b/hoteldetails.html
@@ -47,7 +47,7 @@
                   </a>
                   <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <div class="row" style="width: 500px; height: auto">
-                      <div class="col-6">
+                      <div class="col-6 navbar-column">
                         <a href="">
                           <img
                             src="image/navbar/1.jpg"
@@ -72,7 +72,7 @@
                           />
                         </a>
                       </div>
-                      <div class="col-6">
+                      <div class="col-6 navbar-column">
                         <a class="dropdown-item heading" href="#"
                           >Vehicle Rental</a
                         >
@@ -122,7 +122,7 @@
                   </a>
                   <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <div class="row" style="width: 500px; height: auto">
-                      <div class="col-6">
+                      <div class="col-6 navbar-column">
                         <a href="">
                           <img
                             src="image/navbar/1.jpg"
@@ -147,7 +147,7 @@
                           />
                         </a>
                       </div>
-                      <div class="col-6">
+                      <div class="col-6 navbar-column">
                         <a class="dropdown-item heading" href="#"
                           >Vehicle Rental</a
                         >
@@ -197,7 +197,7 @@
                   </a>
                   <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <div class="row" style="width: 500px; height: auto">
-                      <div class="col-6">
+                      <div class="col-6 navbar-column">
                         <a href="">
                           <img
                             src="image/navbar/1.jpg"
@@ -222,7 +222,7 @@
                           />
                         </a>
                       </div>
-                      <div class="col-6">
+                      <div class="col-6 navbar-column">
                         <a class="dropdown-item heading" href="#"
                           >Vehicle Rental</a
                         >
@@ -272,7 +272,7 @@
                   </a>
                   <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <div class="row" style="width: 500px; height: auto">
-                      <div class="col-6">
+                      <div class="col-6 navbar-column">
                         <a href="">
                           <img
                             src="image/navbar/1.jpg"
@@ -297,7 +297,7 @@
                           />
                         </a>
                       </div>
-                      <div class="col-6">
+                      <div class="col-6 navbar-column">
                         <a class="dropdown-item heading" href="#"
                           >Vehicle Rental</a
                         >
@@ -347,7 +347,7 @@
                   </a>
                   <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <div class="row" style="width: 500px; height: auto">
-                      <div class="col-6">
+                      <div class="col-6 navbar-column">
                         <a href="">
                           <img
                             src="image/navbar/1.jpg"
@@ -372,7 +372,7 @@
                           />
                         </a>
                       </div>
-                      <div class="col-6">
+                      <div class="col-6 navbar-column">
                         <a class="dropdown-item heading" href="#"
                           >Vehicle Rental</a
                         >
@@ -422,14 +422,14 @@
                   </a>
                   <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <div class="row" style="width: 500px; height: auto">
-                      <div class="col-6">
+                      <div class="col-6 navbar-column">
                         <img
                           src="image/navbar/1.jpg"
                           alt=""
                           class="navbar-img"
                         />
                       </div>
-                      <div class="col-6">
+                      <div class="col-6 navbar-column">
                         <a class="dropdown-item heading" href="#"
                           >See all deals</a
                         >
