all pages are responsive noew

--- a/bookTheHotel.html
+++ b/bookTheHotel.html
@@ -544,7 +544,8 @@
       </section>
       <section class="checkout-hotel" id="checkout-checkin">
         <div class="checkout">
-          <div class="row">
+          <div class="row" style="flex-direction: column;
+          gap: 20px;">
             <div class="col-6 check-in">
               <p>CHECK-IN AND CHECK-OUT DATES</p>
               <input type="date" name="" id="" class="check-in-date" />
@@ -630,7 +631,7 @@
                   </p>
                   <p><strong>Pleasure -</strong> <span>Daily housekeeping and ceiling fan</span>
                   </p>
-                  <p>Non-Smoking</p>
+                  <p><strong>Non-Smoking</strong></p>
                   <div class="check-hotel-container">
                     <div class="check-hotel-box">
                       <h5>Amenities and Features</h5>                        
@@ -723,7 +724,7 @@
                   </p>
                   <p><strong>Pleasure -</strong> <span>Daily housekeeping and ceiling fan</span>
                   </p>
-                  <p>Non-Smoking</p>
+                  <p><strong>Non-Smoking</strong></p>
                   <div class="check-hotel-container">
                     <div class="check-hotel-box">
                       <h5>Amenities and Features</h5>                        
@@ -816,7 +817,7 @@
                   </p>
                   <p><strong>Pleasure -</strong> <span>Daily housekeeping and ceiling fan</span>
                   </p>
-                  <p>Non-Smoking</p>
+                  <p><strong>Non-Smoking</strong></p>
                   <div class="check-hotel-container">
                     <div class="check-hotel-box">
                       <h5>Amenities and Features</h5>                        
@@ -874,35 +875,6 @@
               </div>
             </div>
           </div>
-          <!-- 
-          <div class="check-rates-box">
-            <div class="check-rates-image">
-              <img src="image/hotel/1.avif" alt="" />
-            </div>
-            <div class="check-rates-content">
-              <p>DELUXE DOUBLE ROOM, 1 DOUBLE BED, NON SMOKING</p>
-              <a href="">
-                <span>View Room Details And Amenities</span>
-              </a>
-            </div>
-            <div class="check-rates-button">
-              <button type="submit">Check Rates</button>
-            </div>
-          </div>
-          <div class="check-rates-box">
-            <div class="check-rates-image">
-              <img src="image/hotel/1.avif" alt="" />
-            </div>
-            <div class="check-rates-content">
-              <p>DELUXE DOUBLE ROOM, 1 DOUBLE BED, NON SMOKING</p>
-              <a href="">
-                <span>View Room Details And Amenities</span>
-              </a>
-            </div>
-            <div class="check-rates-button">
-              <button type="submit">Check Rates</button>
-            </div>
-          </div> -->
 
           <div class="check-about-hotel">
             <h3>ABOUT THE HOTEL</h3>
@@ -1041,7 +1013,7 @@
                         <p>Distances are displayed to the nearest 0.1 mile and kilometer. <br> </p><p>Kali Bari Temple - 0.5 km / 0.3 mi <br> Himalayan Aviary - 1.1 km / 0.7 mi <br> Mall Road - 1.1 km / 0.7 mi <br> Gaiety Heritage Cultural Complex - 1.2 km / 0.7 mi <br> Sidh Baba Ka Mandir - 1.2 km / 0.8 mi <br> Kotkhai Palace - 1.2 km / 0.8 mi <br> Lankra Veer Temple - 1.2 km / 0.8 mi <br> Mahamai Temple - 1.2 km / 0.8 mi <br> Gaiety Theater - 1.3 km / 0.8 mi <br> Gurkha Gate - 1.3 km / 0.8 mi <br> Shimla Mall - 1.4 km / 0.9 mi <br> Christ Church - 1.5 km / 0.9 mi <br> State Museum - 1.6 km / 1 mi <br> Shimla Heritage Walk - 1.7 km / 1.1 mi <br> Lakkar Bazar - 1.8 km / 1.1 mi <br> </p><p>The nearest airports are:<br>Chandigarh (IXC) - 116.8 km / 72.6 mi<br> Shimla (SLV) - 19.2 km / 12 mi<br> 
                     </div>
                 </div>
-                <div class="col-9">
+                <div class="col-9 hotel-location">
                     <iframe id="map-canvas" class="map_part" width="100%" height="600" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%&amp;height=600&amp;hl=en&amp;q=1%20Grafton%20Street,%20Dublin,%20Ireland+(My%20Business%20Name)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe>
                 </div>
             </div>
