--- a/hotel&package.html
+++ b/hotel&package.html
@@ -46,7 +46,7 @@
                   </a>
                   <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <div class="row" style="width: 500px; height: auto">
-                      <div class="col-6">
+                      <div class="col-6 navbar-column">
                         <a href="">
                           <img
                             src="image/navbar/1.jpg"
@@ -71,7 +71,7 @@
                           />
                         </a>
                       </div>
-                      <div class="col-6">
+                      <div class="col-6 navbar-column">
                         <a class="dropdown-item heading" href="#"
                           >Vehicle Rental</a
                         >
@@ -121,7 +121,7 @@
                   </a>
                   <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <div class="row" style="width: 500px; height: auto">
-                      <div class="col-6">
+                      <div class="col-6 navbar-column">
                         <a href="">
                           <img
                             src="image/navbar/1.jpg"
@@ -146,7 +146,7 @@
                           />
                         </a>
                       </div>
-                      <div class="col-6">
+                      <div class="col-6 navbar-column">
                         <a class="dropdown-item heading" href="#"
                           >Vehicle Rental</a
                         >
@@ -196,7 +196,7 @@
                   </a>
                   <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <div class="row" style="width: 500px; height: auto">
-                      <div class="col-6">
+                      <div class="col-6 navbar-column">
                         <a href="">
                           <img
                             src="image/navbar/1.jpg"
@@ -221,7 +221,7 @@
                           />
                         </a>
                       </div>
-                      <div class="col-6">
+                      <div class="col-6 navbar-column">
                         <a class="dropdown-item heading" href="#"
                           >Vehicle Rental</a
                         >
@@ -271,7 +271,7 @@
                   </a>
                   <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <div class="row" style="width: 500px; height: auto">
-                      <div class="col-6">
+                      <div class="col-6 navbar-column">
                         <a href="">
                           <img
                             src="image/navbar/1.jpg"
@@ -296,7 +296,7 @@
                           />
                         </a>
                       </div>
-                      <div class="col-6">
+                      <div class="col-6 navbar-column">
                         <a class="dropdown-item heading" href="#"
                           >Vehicle Rental</a
                         >
@@ -346,7 +346,7 @@
                   </a>
                   <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <div class="row" style="width: 500px; height: auto">
-                      <div class="col-6">
+                      <div class="col-6 navbar-column">
                         <a href="">
                           <img
                             src="image/navbar/1.jpg"
@@ -371,7 +371,7 @@
                           />
                         </a>
                       </div>
-                      <div class="col-6">
+                      <div class="col-6 navbar-column">
                         <a class="dropdown-item heading" href="#"
                           >Vehicle Rental</a
                         >
@@ -421,14 +421,14 @@
                   </a>
                   <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <div class="row" style="width: 500px; height: auto">
-                      <div class="col-6">
+                      <div class="col-6 navbar-column">
                         <img
                           src="image/navbar/1.jpg"
                           alt=""
                           class="navbar-img"
                         />
                       </div>
-                      <div class="col-6">
+                      <div class="col-6 navbar-column">
                         <a class="dropdown-item heading" href="#"
                           >See all deals</a
                         >
