--- a/bookTheHotel.html
+++ b/bookTheHotel.html
@@ -1350,134 +1350,55 @@
           </div>
 
           <div class="check-about-hotel">
-            <h3>ABOUT THE HOTEL</h3>
-            <div class="check-about-hotel-box">
-                <h5>Hotel Location & Nearby Attractions</h5>
-                <p>Located in Shimla, Hotel Baljees Regency is within a 15-minute walk of Kali Bari Temple and Himalayan Aviary. This hotel is 5.8 mi (9.3 km) from Mall Road and 0.8 mi (1.2 km) from Sidh Baba Ka Mandir.</p>
-                <h5>Popular Hotel Amenities and Features</h5>
-                <p>Make use of convenient amenities such as complimentary wireless Internet access, tour/ticket assistance, and a banquet hall.</p>
-                <h5>Business, Other Amenities</h5>
-                <p>Featured amenities include complimentary newspapers in the lobby, dry cleaning/laundry services, and a 24-hour front desk. Limited parking is available onsite.</p>
-                <h5>Restaurants, Bars, Lounge & Dining options</h5>
-                <p>Satisfy your appetite for lunch or dinner at the hotel's restaurant, or stay in and take advantage of the 24-hour room service. Wrap up your day with a drink at the bar/lounge. A complimentary continental breakfast is served daily from 8 AM to 10 AM.</p>
-                <h5>Hotel Accommodations and Guest Rooms</h5>
-                <p>Make yourself at home in one of the 30 guestrooms. Complimentary wireless Internet access keeps you connected, and cable programming is available for your entertainment. Bathrooms have showers and complimentary toiletries. Conveniences include safes and desks, and housekeeping is provided daily.</p>
-
-                <p style="color:gray
-                ">Hotel Baljees Regency Hotel Amenities</p>
                 <div class="check-hotel-container">
                     <div class="check-hotel-box">
-                        <h5>Accessibility</h5>
+                        <h5>Highlighted Amenities</h5>
                         <ul>
-                            <li>
-                                Wheelchair Accessible bathroom
-                            </li>
-                        </ul>
-                        <h5>Breakfast Services</h5>
-                        <ul>
-                            <li>
-                                Complimentary Breakfast
-                            </li>
-                        </ul>
-                        <h5>Business, Conference & Meetings</h5>
-                        <ul>
-                            <li>
-                                Banquet hall on site
-                            </li>
-                        </ul>
-                        <h5>General Amenities</h5>
-                        <ul>
-                            <li>Daily</li>
-                                <li>
-                                    Free continental breakfast
-                                </li>
+                            <li>- Lounge</li>
+                            <li>- Tours and Treks</li>
+                            <li>- Free Parking</li>                        
+                            <li> - Business Centre</li>
                         </ul>
                     </div>
                     <div class="check-hotel-box">
-                        <h5>Accessibility</h5>
-                        <ul>
-                            <li>
-                                Wheelchair Accessible bathroom
+                      <h5>
+                        Basic Facilities
+                      </h5>
+                      <ul>
+                        <li>- Free Parking</li>
+                          <li>- Elivator/Lift</li>
+                          <li>- 24-hour Room Service</li>                        
+                          <li> - Power Backup</li>
+                      </ul>
+                  </div>
+                    <div class="check-hotel-box">
+                        <h5>Transfers</h5>
+                        <li>
+                          - Paid Railway Station Transfers
+                        </li>
+                        <li>
+                          - Paid Airport Transfers
+                        </li>
+                    </div>
+                    <div class="check-hotel-box">
+                        <h5>Family and kids</h5>
+                          <ul>
+                            <li>- Childcare Services
                             </li>
-                        </ul>
-                        <h5>Breakfast Services</h5>
-                        <ul>
-                            <li>
-                                Complimentary Breakfast
-                            </li>
-                        </ul>
-                        <h5>Business, Conference & Meetings</h5>
-                        <ul>
-                            <li>
-                                Banquet hall on site
-                            </li>
-                        </ul>
-                        <h5>General Amenities</h5>
-                        <ul>
-                            <li>Daily</li>
-                                <li>
-                                    Free continental breakfast
-                                </li>
                         </ul>
                     </div>
                     <div class="check-hotel-box">
-                        <h5>Accessibility</h5>
+                      <h5>Food and Drinks</h5>
                         <ul>
-                            <li>
-                                Wheelchair Accessible bathroom
-                            </li>
-                        </ul>
-                        <h5>Breakfast Services</h5>
-                        <ul>
-                            <li>
-                                Complimentary Breakfast
-                            </li>
-                        </ul>
-                        <h5>Business, Conference & Meetings</h5>
-                        <ul>
-                            <li>
-                                Banquet hall on site
-                            </li>
-                        </ul>
-                        <h5>General Amenities</h5>
-                        <ul>
-                            <li>Daily</li>
-                                <li>
-                                    Free continental breakfast
-                                </li>
-                        </ul>
-                    </div>
-                    <div class="check-hotel-box">
-                        <h5>Accessibility</h5>
-                        <ul>
-                            <li>
-                                Wheelchair Accessible bathroom
-                            </li>
-                        </ul>
-                        <h5>Breakfast Services</h5>
-                        <ul>
-                            <li>
-                                Complimentary Breakfast
-                            </li>
-                        </ul>
-                        <h5>Business, Conference & Meetings</h5>
-                        <ul>
-                            <li>
-                                Banquet hall on site
-                            </li>
-                        </ul>
-                        <h5>General Amenities</h5>
-                        <ul>
-                            <li>Daily</li>
-                                <li>
-                                    Free continental breakfast
-                                </li>
-                        </ul>
-                    </div>
+                          <li>-Bar</li>
+                          <li>- Restaurant</li>
+                          <li>- Cooking Class</li>
+                          <li>- Dining Area</li>
+                      </ul>
+                  </div>
                 </div>
             </div>
           </div>
-
           <div class="hotel-location">
             <h3>HOTEL LOCATION</h3>
             <div class="row">
@@ -1486,7 +1407,7 @@
                         <p>Distances are displayed to the nearest 0.1 mile and kilometer. <br> </p><p>Kali Bari Temple - 0.5 km / 0.3 mi <br> Himalayan Aviary - 1.1 km / 0.7 mi <br> Mall Road - 1.1 km / 0.7 mi <br> Gaiety Heritage Cultural Complex - 1.2 km / 0.7 mi <br> Sidh Baba Ka Mandir - 1.2 km / 0.8 mi <br> Kotkhai Palace - 1.2 km / 0.8 mi <br> Lankra Veer Temple - 1.2 km / 0.8 mi <br> Mahamai Temple - 1.2 km / 0.8 mi <br> Gaiety Theater - 1.3 km / 0.8 mi <br> Gurkha Gate - 1.3 km / 0.8 mi <br> Shimla Mall - 1.4 km / 0.9 mi <br> Christ Church - 1.5 km / 0.9 mi <br> State Museum - 1.6 km / 1 mi <br> Shimla Heritage Walk - 1.7 km / 1.1 mi <br> Lakkar Bazar - 1.8 km / 1.1 mi <br> </p><p>The nearest airports are:<br>Chandigarh (IXC) - 116.8 km / 72.6 mi<br> Shimla (SLV) - 19.2 km / 12 mi<br> 
                     </div>
                 </div>
-                <div class="col-9 hotel-location">
+                <div class="col-9 hotel-location-map">
                     <iframe id="map-canvas" class="map_part" width="100%" height="600" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%&amp;height=600&amp;hl=en&amp;q=1%20Grafton%20Street,%20Dublin,%20Ireland+(My%20Business%20Name)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe>
                 </div>
             </div>
