added package page

--- a/package.html
+++ b/package.html
@@ -1924,6 +1924,86 @@
         </div>
       </section>
 
+      <section class="customer-care">
+        <div class="customer-care-content">
+          <h3>24/7 Customer Support</h3>
+          <p>
+            Our team of experienced tour specialists have travelled to hundreds
+            of countries around the globe and have decades of first-hand travel
+            experience to share. Contact us now to have all of your tour-related
+            questions answered!
+          </p>
+          <div class="customer-care-button">
+            <button type="submit">Contact Us</button>
+          </div>
+        </div>
+        <div class="customer-care-image"></div>
+      </section>
+
+      <section class="blog">
+        <div class="blog-benifits">
+          <div class="blog-benifits-header">
+            <p>DAYS TO COME BLOG</p>
+            <p>A TRAVEL MAGAZINE BY COMPASS TOURISM</p>
+          </div>
+          <div class="blog-benifits-body">
+            <div class="blog-benifits-container-1">
+              <div class="blog-benifits-box">
+                <div class="blog-benifits-box-image">
+                  <img src="image/sample1/1.jpg" alt="" />
+                </div>
+                <div class="blog-benifits-box-content">
+                  <div>
+                    <p>Upcoming Events</p>
+                    <span
+                      >Book your dream trip to the Maldives! Save up to
+                      50%</span
+                    >
+                  </div>
+                  <div>
+                    <p><a href="">View Details</a></p>
+                  </div>
+                </div>
+              </div>
+              <div class="blog-benifits-box">
+                <div class="blog-benifits-box-image">
+                  <img src="image/sample1/6.jpg" alt="" />
+                </div>
+                <div class="blog-benifits-box-content">
+                  <div>
+                    <p>Upcoming Events</p>
+                    <span
+                      >Book your dream trip to the Maldives! Save up to
+                      50%</span
+                    >
+                  </div>
+                  <div>
+                    <p><a href="">View Details</a></p>
+                  </div>
+                </div>
+              </div>
+              <div class="blog-benifits-box">
+                <div class="blog-benifits-box-image">
+                  <img src="image/sample1/1.jpg" alt="" />
+                </div>
+                <div class="blog-benifits-box-content">
+                  <div>
+                    <p>Upcoming Events</p>
+                    <span
+                      >Book your dream trip to the Maldives! Save up to
+                      50%</span
+                    >
+                  </div>
+                  <div>
+                    <p><a href="">View Details</a></p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
       <footer>
         <div class="footer-container">
           <div class="footer-box">
